# AscendInference

./: .claudeignore  .gitignore  AGENTS.md  BUGFIX.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_REVIEW.md  CODE_REVIEW_ASCEND_YOLO_SYSTEM.md  CODE_REVIEW_BOT_REPORT.md  CODE_REVIEW_COMPREHENSIVE.md  FINAL_CODE_REVIEW_REPORT.md  INTEGRATED_CODE_REVIEW_REPORT.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_REVIEW.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_REFACTOR_ANALYSIS.md  PROJECT_ANALYSIS_AND_RECOMMENDATIONS.md  README.md  config.py  main.py  package_project.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_config.py  test_exception.py  test_logger.py  verify_optimization.py  verify_short_to_mid_optimization.py
.github/workflows/: ci.yml
.trae/documents/: performance-refactor-plan.md
benchmark/: __init__.py  reporters.py  scenarios.py
commands/: __init__.py  check.py  config.py  enhance.py  extreme_bench.py  infer.py  model_bench.py  package.py  strategy_bench.py
config/: __init__.py  config.py  default.json  high_accuracy.json  high_performance.json  high_resolution.json  strategy_config.py  validator.py
config/evaluation/: default_remote_sensing_eval.json  (+4 more)
demo/: comprehensive_checker.py  environment_checker.py
docs/: 00-文档导航.md  README.md  implementation-guide.md  logging-guidelines.md  optimization-plan.md  requirements-specification.md  user-manual.md
evaluations/: __init__.py  routes.py  tasks.py  tiers.py
example/: comprehensive_example.py
examples/: basic_inference.py  comprehensive_example.py  config_management.py  high_res_inference.py  multithread_inference.py  usage_examples.py
registry/: __init__.py  devices.py  loader.py  models.py  scenarios.py
reporting/: archive.py  models.py  renderers.py
scripts/: batch_inference.py  benchmark.py  config_manager.py  high_res_inference.py  realtime_inference.py  run_smoke_eval.py
src/: __init__.py  api.py  base_inference.py  inference.py  yolo_inference.py  yolo_inference_fast.py  yolo_inference_high_res.py  yolo_inference_multithread.py
tests/: UNIT_TESTING.md  benchmark.py  conftest.py  test_all.py  test_evaluation_tasks.py  test_inference_core.py  test_logger.py  test_metrics.py  test_refactor_validation.py  test_registry.py  test_reporting.py  test_scenarios.py  test_strategies.py  test_strategy_config.py
tools/: __init__.py  data_generator.py  image_enhancer.py
utils/: __init__.py  acl_utils.py  data_generator.py  exceptions.py  image_enhancer.py  logger.py  memory_pool.py  metrics.py  monitor.py  profiler.py  validators.py
(+39 files in other folders)
